(feat-intelStream): added the counting, mapping and grouping by queries for for analytics snapshots implemented the filter query features